[gd_scene load_steps=23 format=3 uid="uid://e0xov8hgscfh"]

[ext_resource type="Script" uid="uid://cwxqfo76wqhmr" path="res://baubles/bauble.gd" id="1_lpuy0"]
[ext_resource type="PackedScene" uid="uid://cgkikvd22mec6" path="res://components/body_detector/body_detector.tscn" id="1_srsha"]
[ext_resource type="PackedScene" uid="uid://l160kxor0r2e" path="res://components/pathfinding/pathfinding.tscn" id="2_mgsm3"]
[ext_resource type="PackedScene" uid="uid://dnurpmd4urlt7" path="res://components/state_machine/state_machine.tscn" id="3_btsnt"]
[ext_resource type="Texture2D" uid="uid://knrqs61vl2k2" path="res://baubles/bauble_sprites/Bauble_Diamond.png" id="3_g2pfq"]
[ext_resource type="Script" uid="uid://8fx8nkbmyhti" path="res://baubles/bauble_states/bauble_idle.gd" id="4_g2pfq"]
[ext_resource type="Script" uid="uid://c61cqr7jhfnf7" path="res://baubles/adapt_target.gd" id="4_lpuy0"]
[ext_resource type="Script" uid="uid://bhrdggt0womj2" path="res://baubles/bauble_states/bauble_follow.gd" id="5_lpuy0"]
[ext_resource type="Script" uid="uid://540tlmo2yxrt" path="res://baubles/bauble_states/bauble_patrol.gd" id="6_hlfcm"]
[ext_resource type="Script" uid="uid://cpmovm7hur2uf" path="res://baubles/bauble_states/bauble_targeting.gd" id="7_86d0t"]
[ext_resource type="Script" uid="uid://dmkxjipukcamf" path="res://baubles/bauble_states/bauble_attack.gd" id="8_aqm36"]
[ext_resource type="Script" uid="uid://dty07i40qv77b" path="res://baubles/bauble_states/bauble_held.gd" id="9_qd0ka"]
[ext_resource type="Script" uid="uid://bvmxl8h6x88jw" path="res://baubles/bauble_states/bauble_thrown.gd" id="10_yam3n"]
[ext_resource type="Script" uid="uid://bf8bm7473vluq" path="res://baubles/bauble_states/bauble_defend.gd" id="11_dyony"]
[ext_resource type="Script" uid="uid://ci7bpo5hqxep1" path="res://baubles/bauble_states/bauble_return.gd" id="12_wet5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lpuy0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hlfcm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_86d0t"]
radius = 10.5499

[sub_resource type="Animation" id="Animation_86d0t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaubleBody/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaubleBody/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -5)]
}

[sub_resource type="Animation" id="Animation_hlfcm"]
resource_name = "throw"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaubleBody/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaubleBody/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, -5), Vector2(4, -35), Vector2(4, -5)]
}

[sub_resource type="Animation" id="Animation_g2pfq"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaubleBody/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaubleBody/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aqm36"]
_data = {
&"RESET": SubResource("Animation_86d0t"),
&"idle": SubResource("Animation_g2pfq"),
&"throw": SubResource("Animation_hlfcm")
}

[node name="bauble" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lpuy0")

[node name="AdaptTarget" type="Marker2D" parent="."]
script = ExtResource("4_lpuy0")

[node name="ColorRect" type="ColorRect" parent="AdaptTarget"]
offset_left = 3.0
offset_top = -3.0
offset_right = 9.0
offset_bottom = 4.0
scale = Vector2(-0.918026, 0.785896)
color = Color(0, 0.337255, 0.529412, 1)

[node name="BaubleBody" type="CharacterBody2D" parent="."]
z_index = 3
collision_layer = 4
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaubleBody"]
shape = SubResource("CircleShape2D_lpuy0")

[node name="Hurtbox" type="Area2D" parent="BaubleBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaubleBody/Hurtbox"]
shape = SubResource("CircleShape2D_hlfcm")

[node name="BodyDetector" parent="BaubleBody" instance=ExtResource("1_srsha")]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaubleBody/BodyDetector"]
scale = Vector2(3.27954, -3.21653)
shape = SubResource("CircleShape2D_86d0t")

[node name="Sprite2D" type="Sprite2D" parent="BaubleBody"]
position = Vector2(4, -5)
texture = ExtResource("3_g2pfq")
offset = Vector2(4.03039, -5.06889)

[node name="AnimationPlayer" type="AnimationPlayer" parent="BaubleBody"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_aqm36")
}

[node name="Pathfinding" parent="BaubleBody" node_paths=PackedStringArray("host", "target_node") instance=ExtResource("2_mgsm3")]
active = false
host = NodePath("..")
target_node = NodePath("../../AdaptTarget")
speed = 200
deceleration = 0.1
stop_range = 30.0

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_btsnt")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("4_g2pfq")

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource("5_lpuy0")

[node name="Patrol" type="Node2D" parent="StateMachine"]
script = ExtResource("6_hlfcm")

[node name="Timer" type="Timer" parent="StateMachine/Patrol"]
one_shot = true

[node name="Targeting" type="Node2D" parent="StateMachine"]
script = ExtResource("7_86d0t")

[node name="AttackTimer" type="Timer" parent="StateMachine/Targeting"]
wait_time = 3.0
one_shot = true

[node name="Attack" type="Node2D" parent="StateMachine"]
script = ExtResource("8_aqm36")

[node name="Held" type="Node2D" parent="StateMachine"]
script = ExtResource("9_qd0ka")

[node name="Thrown" type="Node2D" parent="StateMachine"]
script = ExtResource("10_yam3n")

[node name="Defend" type="Node2D" parent="StateMachine"]
script = ExtResource("11_dyony")

[node name="Return" type="Node2D" parent="StateMachine"]
script = ExtResource("12_wet5a")

[connection signal="animation_finished" from="BaubleBody/AnimationPlayer" to="StateMachine/Thrown" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StateMachine/Patrol/Timer" to="StateMachine/Patrol" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Targeting/AttackTimer" to="StateMachine/Targeting" method="_on_attack_timer_timeout"]
